bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:1: error: type mismatch;
 found   : Unit
 required: Boolean
def parotTrouble(talking:Boolean, hour:Int):Boolean = {if (talking&&(hour>20)) {return(true)}; if (talking&&(hour<7)) {return(true); return(false)}
                                                                                               ^